// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hookScript should match snapshot (OS X/Linux) 1`] = `
"#!/bin/sh
# husky
# v1.0.0-rc.15 darwin

scriptPath=\\"node_modules/husky/lib/runner/bin.js\\"
hookName=\`basename \\"$0\\"\`
gitParams=\\"$*\\"

if ! command -v node >/dev/null 2>&1; then
  echo \\"Can't find node in PATH, trying to find a node binary on your system\\"
fi

if [ -f $scriptPath ]; then
  node_modules/run-node/run-node $scriptPath $hookName \\"$gitParams\\"
else
  echo \\"Can't find Husky, skipping $hookName hook\\"
  echo \\"You can reinstall it using 'npm install husky --save-dev' or delete this hook\\"
fi
"
`;

exports[`hookScript should match snapshot (Windows) 1`] = `
"#!/bin/sh
# husky
# v1.0.0-rc.15 win32

scriptPath=\\"node_modules/husky/lib/runner/bin.js\\"
hookName=\`basename \\"$0\\"\`
gitParams=\\"$*\\"

if [ -f $scriptPath ]; then
  node $scriptPath $hookName \\"$gitParams\\"
else
  echo \\"Can't find Husky, skipping $hookName hook\\"
  echo \\"You can reinstall it using 'npm install husky --save-dev' or delete this hook\\"
fi
"
`;
